Icon alignment fixes, portal mobile menu as a real dropdown

--- a/services/web/src/semantic/collections/breadcrumb.less
+++ b/services/web/src/semantic/collections/breadcrumb.less
@@ -58,6 +58,7 @@
 .ui.breadcrumb .icon.divider {
   font-size: @iconDividerSize;
   vertical-align: @iconDividerVerticalAlign;
+  margin-top: 2px;
 }
 
 /* Section */
