--- a/services/web/src/semantic/collections/table.less
+++ b/services/web/src/semantic/collections/table.less
@@ -882,11 +882,11 @@
   border: 5px solid transparent;
 }
 .ui.sortable.table thead th.ascending:after {
-  margin-top: -5px;
+  margin-top: -8px;
   border-bottom-color: @sortableColor;
 }
 .ui.sortable.table thead th.descending:after {
-  margin-top: 5px;
+  margin-top: 3px;
   border-top-color: @sortableColor;
 }
 
