--- a/services/web/src/semantic/elements/button.less
+++ b/services/web/src/semantic/elements/button.less
@@ -681,7 +681,7 @@
 
 .ui.icon.buttons .button,
 .ui.icon.button {
-  padding: @verticalPadding @verticalPadding (@verticalPadding + @shadowOffset);
+  padding: @verticalPadding (@verticalPadding + 0.2em) (@verticalPadding + @shadowOffset);
   box-sizing: content-box;
 }
 
