--- a/services/web/src/semantic/elements/input.less
+++ b/services/web/src/semantic/elements/input.less
@@ -245,7 +245,7 @@
   line-height: 1;
   text-align: center;
   top: 50%;
-  right: 10px;
+  right: 0;
   margin: 0em;
   transform: translateY(-50%);
 
@@ -254,7 +254,7 @@
   opacity: @iconOpacity;
   border-radius: 0em @borderRadius @borderRadius 0em;
   transition: @iconTransition;
-  padding: 0.95em;
+  padding: 1.0em;
 }
 .ui.icon.input > svg.icon:not(.link) {
   pointer-events: none;
