--- a/services/web/src/semantic/elements/label.less
+++ b/services/web/src/semantic/elements/label.less
@@ -67,6 +67,7 @@ a.ui.label {
 /* Icon */
 .ui.label > .icon {
   margin: 0em @iconDistance 0em 0em;
+  font-size: @deleteSize;
 }
 
 /* Detail */
